# fconvert

./: .gitignore  CMakeLists.txt  LICENSE  PKGBUILD  README.md  main.cpp
classes/: audio_converter.cpp  audio_converter.h  image_converter.cpp  image_converter.h  path_handler.cpp  path_handler.h  video_converter.cpp  video_converter.h
